===0.7.X [Unreleased]
  - Fixed bug with ranking of records [Christopher Souvey - bug report]
  - Fixed a bug with the slicing of records before AR order is applied. [Christopher Souvey - bug report]
  - Fixed bug with slicing of id-only results.

===0.7.1 [22nd February 2011]
 - Removed file locking on Microsoft Windows as it is unsupported.

===0.7.0 [11th February 2011]
 - Threadsafe support. Index files are now locked for changes, and atomically written.
 - Configurable case-sensitivity.
 - Improved performance of index builds.
 - Now warns on old version of the index.
 - Upgrade instructions added to README. [ionas - Florent Guilleux]

===0.6.7 [7th February 2011]
 - find_by_index and paginate_search are no longer deprecated.
 - Improved documentation.
 - Storage is now its own class to allow future development of locking and pluggable backends.

===0.6.6 [31st August 2010]
 - Now Heroku compatible out of the box, index is created in tmp when root dir is non-writable. [parndt - Philip Arndt - Great suggestion]
 - Fixed a require path issue on 1.9.2.
 - Fixed an issue with index_file location on Rails 3.0.0 final.

===0.6.5 [19th August 2010]
 - Reintroduced support for older version of Ruby which do not implement Array#exclude? [bug report by Andy Eggers]
 - Using Bundler to manage development dependencies.

===0.6.4 [16th August 2010]
 - Added starts-with query type [nilbus - Edward Anderson]
 - Various fixes and improvements.
 - Real names given for all contributors.

===0.6.3 [5th July 2010]
 - Index file path can now be defined as a Pathname as well as an array. [parndt - Philip Arndt]
 - Can now define which records are indexed and which are not via an :if proc. [madpilot - Myles Eftos]
 - Lots of tidying up. [parndt - Philip Arndt]
 - Rails 3 fixes. [myabc - Alex Coles]

===0.6.2 [11th June 2010]
 - Now available as a Gem as well as the original plugin. [parndt - Philip Arndt - Thanks for doing most of the hard work.]

===0.6.0 [10th June 2010]