@@ -2,6 +2,7 @@
   - Fixed bug with ranking of records [Christopher Souvey - bug report]
   - Fixed a bug with the slicing of records before AR order is applied. [Christopher Souvey - bug report]
   - Fixed bug with slicing of id-only results.
+  - Error now raised when combining ids_only with find options other than limit and offset.
 
 ===0.7.1 [22nd February 2011]
  - Removed file locking on Microsoft Windows as it is unsupported.
